@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2012/10/02 23:48:02 asau Exp $
+# $NetBSD: Makefile,v 1.3 2012/12/11 10:28:11 ryoon Exp $
 #
 
-DISTNAME=	opus-tools-0.1.5
-PKGREVISION=	1
+DISTNAME=	opus-tools-0.1.6
 CATEGORIES=	audio
 MASTER_SITES=	http://downloads.xiph.org/releases/opus/
 
