@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.14 2012/12/08 00:15:26 jakllsch Exp $
+$NetBSD: distinfo,v 1.15 2012/12/14 19:49:42 drochner Exp $
 
-SHA1 (darktable-1.1.1.tar.gz) = ad563d8d4ac3c3e463830658e49e733918988273
-RMD160 (darktable-1.1.1.tar.gz) = c97fe1794e56e7325edc4b3e092054da75af2fd5
-Size (darktable-1.1.1.tar.gz) = 3422916 bytes
+SHA1 (darktable-1.1.2.tar.gz) = 5f3e97f176543d2dc2222fd98fba385e98aed549
+RMD160 (darktable-1.1.2.tar.gz) = 8c4594334f884866b789fedf87093f232c3fb4b4
+Size (darktable-1.1.2.tar.gz) = 3432009 bytes
 SHA1 (patch-cmake_modules_FindGTK2.cmake) = de1273594801ab82da31b624845e0b36a77b53b3
 SHA1 (patch-src_LibRaw_libraw_libraw__alloc.h) = 8227a7180383cd4379313b07ff964bb7fb9ce694
 SHA1 (patch-src_common_imageio__rgbe.c) = 5c396754d6dbb7390062e78afde315ee293215d6
