@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.86 2012/04/16 17:00:28 ryoon Exp $
+# $NetBSD: Makefile,v 1.87 2012/10/08 12:19:17 asau Exp $
 
 DISTNAME=	mew-6.5
 PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
@@ -20,7 +20,7 @@ INFO_FILES=	yes
 
 GNU_CONFIGURE=	yes
 
-EMACS_VERSIONS_ACCEPTED=	emacs23 emacs23nox emacs22 emacs22nox emacs21 emacs21nox
+EMACS_VERSIONS_ACCEPTED=	emacs24 emacs24nox emacs23 emacs23nox emacs22 emacs22nox emacs21 emacs21nox
 EMACS_MODULES+=			base
 
 MAKE_FLAGS+=	DESTDIR=${DESTDIR:Q}
