@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.227 2013/01/20 13:35:45 morr Exp $
+$NetBSD: CHANGES-2013,v 1.229 2013/01/20 19:55:11 jakllsch Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -307,3 +307,5 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated devel/ruby-subversion to 1.6.20 [ryoon 2013-01-20]
 	Updated devel/py-subversion to 1.6.20 [ryoon 2013-01-20]
 	Updated devel/java-subversion to 1.6.20 [ryoon 2013-01-20]
+	Updated graphics/darktable to 1.1.2 [jakllsch 2013-01-20]
+	Updated audio/opus-tools to 0.1.6 [ryoon 2013-01-20]
